fix: fix overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -6,23 +6,13 @@
   @apply text-blue-600 underline visited:text-blue-700 hover:text-blue-500 focus:text-blue-500;
 }
 
-/* scrollbar */
-/* width */
-::-webkit-scrollbar {
-  width: 0.25rem;
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #cbd5e1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #075985;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #082f49;
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
